# arena-2025-iap

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/workflows/: main.yml
arena/: __init__.py  dataset.py  features.py  plots.py
arena/_ai/: dataset.py  features.py  plots.py
arena/_ai/modeling/: predict.py  train.py
arena/_course/: Syllabus.md
arena/_course/ps01/tex/: preamble.tex
arena/chapter0_fundamentals/: plotly_utils.py
arena/chapter0_fundamentals/part0_prereqs/: 0.0_Prerequisites_exercises.ipynb  0.0_Prerequisites_solutions.ipynb  solutions.py  utils.py
arena/chapter0_fundamentals/part1_ray_tracing/: 0.1_Ray_Tracing_exercises.ipynb  0.1_Ray_Tracing_solutions.ipynb  pikachu.pt  solutions.py  test_with_pytest.py  tests.py  utils.py
arena/chapter0_fundamentals/part2_cnns/: 0.2_CNNs_&_ResNets_exercises.ipynb  0.2_CNNs_&_ResNets_solutions.ipynb  solutions.py  tests.py  utils.py
arena/chapter0_fundamentals/part3_optimization/: 0.3_Optimization_exercises.ipynb  0.3_Optimization_solutions.ipynb  solutions.py  tests.py  utils.py
arena/chapter0_fundamentals/part4_backprop/: 0.4_Backprop_exercises.ipynb  0.4_Backprop_solutions.ipynb  solutions.py  tests.py  utils.py
arena/chapter0_fundamentals/part5_vaes_and_gans/: 0.5_VAEs_&_GANs_exercises.ipynb  0.5_VAEs_&_GANs_solutions.ipynb  solutions.py  tests.py  utils.py
arena/modeling/: __init__.py  predict.py  train.py
docker/: arena-2025-iap.Dockerfile  docker-compose.yml
docs/: api.md  index.md  mkdocs.yml
docs/docs/: 00-fundamentals.md  index.md
notebooks/: 0.01_gatlen_example.ipynb  0.02_gatlen_example.ipynb  README.md
